repology-updater/tests/snapshots/parsers__freebsd_error_bad_package_format.snap
---
source: repology-updater/tests/parsers.rs
expression: res
---
Err(
    Error {
        context: "on line 1",
        source: "expected <package name>-<version> in the first field",
    },
)
