repology-updater/tests/snapshots/parsers__freebsd_error_bad_package_path.snap
---
source: repology-updater/tests/parsers.rs
expression: res
---
Err(
    Error {
        context: "on line 1",
        source: "unexpectedly short port path (expected at least category/name)",
    },
)
