repology-updater/tests/snapshots/parsers__freebsd_error_extra_field.snap
---
source: repology-updater/tests/parsers.rs
expression: res
---
Err(
    Error {
        context: "on line 1",
        source: "expected 13 fields, got 14",
    },
)
