repology-updater/tests/snapshots/parsers__freebsd_error_missing_name.snap
---
source: repology-updater/tests/parsers.rs
expression: res
---
Err(
    Error {
        context: "on line 1",
        source: EmptyProjectNameSeed,
    },
)
