repology-updater/tests/snapshots/parsers__stalix_error_bad_json.snap
---
source: repology-updater/tests/parsers.rs
expression: res
---
Err(
    Error {
        context: "on line 1",
        source: Error("expected `,` or `}`", line: 1, column: 142),
    },
)
