repology-updater/tests/snapshots/parsers__stalix_error_bad_lang_module.snap
---
source: repology-updater/tests/parsers.rs
expression: res
---
Err(
    Error {
        context: "on line 1",
        source: "unexpected lang_module ruby",
    },
)
