repology-updater/tests/snapshots/parsers__yacp_ok.snap
---
source: repology-updater/tests/parsers.rs
expression: res
---
Ok(
    [
        Package {
            srcname: "ACE",
            binnames: [
                "ACE",
            ],
            trackname: "ACE",
            visiblename: "ACE",
            projectname_seed: "ACE",
            rawversion: "1.01",
            category: "Science",
            comment: "Accurate Correction of Errors",
            links: [
                Link {
                    type: UpstreamHomepage,
                    url: "https://github.com/Sheikhizadeh/ACE",
                    fragment: None,
                },
            ],
            version: "1.01",
            flags: PackageFlags(
                0x0,
            ),
        },
    ],
)
